NEW HEADER IN PROGRESS

--- a/index.html
+++ b/index.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css" media="screen">
     <title>Cheat-SheetCSS</title>
-  </head>
+</head>
+<body>
+
+<!---HEADER------------------>
+<header>
+      <div class="lucian">
+            <img src="Untitled.png" alt="arriere plan" />
+      </div>
+      <div class="zed">
+            <img src="css.jpg" alt="ICONE CSS" />
+      </div>
+            <h1><u>Cheat-Sheet CSS</u></h1>
+
+</header>
+
+<!--FOOTER------------------>
+<footer>
 
 
+</footer>
 
-
-  <body>
-
-<!---------------------HEADER------------------>
-    <header>
-
-    </header>
-
-<!---------------------FOOTER------------------>
-    <footer>
-
-
-    </footer>
-
-  </body>
+</body>
 </html>
