--- a/index.html
+++ b/index.html
@@ -9,19 +9,22 @@
 
 <!---HEADER------------------>
 <header>
-      <div class="lucian">
-            <img src="Untitled.png" alt="arriere plan" />
-      </div>
-      <div class="zed">
-            <img src="css.jpg" alt="ICONE CSS" />
-      </div>
-            <h1><u>Cheat-Sheet CSS</u></h1>
+  <div class="lucian">
+        <img src="Untitled.png" alt="arriere plan" />
+  </div>
+  <div class="zed">
+        <img src="css.jpg" alt="ICONE CSS" />
+  </div>
+        <h1><u>Cheat-Sheet CSS</u></h1>
 
 </header>
 
 <!--FOOTER------------------>
 <footer>
+    <div class="ninus">
+        <h3><u>Introduction au CSS :</u></h3>
 
+    </div>
 
 </footer>
 
