--- a/index.html
+++ b/index.html
@@ -22,10 +22,30 @@
 <!--FOOTER------------------>
 <footer>
     <div class="ninus">
-        <h3><u>Introduction au CSS :</u></h3>
+        <h3><u>Introduction au CSS :</u></h3>           <!--DEBUT DE L'INTRODUCTION-->
+        <p>
+              Les CSS, Cascading Style Sheets (feuilles de styles en cascade), servent à mettre en forme des documents web, type page HTML ou XML.
+              Par l'intermédiaire de propriétés d'apparence (couleurs, bordures, polices, etc.) et de placement (largeur, hauteur, côte à côte, dessus-dessous, etc.),
+              le rendu d'une page web peut être intégralement modifié sans aucun code supplémentaire dans la page web. Les feuilles de styles ont d'ailleurs pour objectif principal de dissocier le contenu de la page de son apparence visuelle.
+              Ceci permet :
+        </p>
+        <ul><strong>
+            <li>de ne pas répéter dans chaque page le même code de mise en forme</li>
+            <li>d'utiliser des styles génériques, avec des noms explicites (par exemple un style encadré pour du texte ou des images)</li>
+            <li>de pouvoir changer l'apparence d'un site web complet en ne modifiant qu'un seul fichier</li>
+            <li>de faciliter la lecture du code de la page</li></strong>
+        </ul>
 
-    </div>
-
+      <p class="papa">
+        Bref les CSS permettent de gagner en productivité et en maintenabilité des sites web, tout en offrant des possibilités graphiques incontestables. Lorsqu'on se lance dans la conception de pages web, il faut apprendre les CSS !
+          Ce livre reprend les spécifications du W3C dont les CSS font partie, mais en les rendant intelligibles aux non-initiés et en les agrémentant de conseils, d'exemples, d'astuces... Il nécessite comme pré-requis la connaissance des bases du langage HTML,
+           éventuellement XHTML pour lequel les CSS peuvent devenir absolument nécessaires.
+          Enfin les spécifications du W3C sur lesquelles se basent ce livre concernent les CSS version 2.1.
+      </p>
+    </div> <!--FIN DE LINTRODUCTION-->
+      <div class="oklm">
+        <h3><u>Exemple de CSS :</u></h3>
+      </div>
 </footer>
 
 </body>
