--- a/index.html
+++ b/index.html
@@ -86,6 +86,17 @@ Il est bien évidemment possible de spécifier plusieurs règles, pour un même 
             </p>
 
       </div>
+<!--pied de page-->
+      <div class="hyx">
+
+        <h3><u>Conseil :</u></h3>
+
+        <p>
+          Si vous voulez en savoir + sur CSS, faites des tuto, du genre "Treehouse ou OpenClassRoom" qui sont de très bon tuto; car le CSS est tellement complet,
+          que ce CheatSheet vous perdra rapidement;
+        </p>
+
+      </div>
 </footer>
 
 </body>
